project/force-app/main/default/objects/RO_Handover__c/RO_Handover__c.object-meta.xml
<CustomObject>
    <label>RO Handover</label>
    <pluralLabel>RO Handovers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>RO Handover Name</label>
        <type>Text</type>
    </nameField>
</CustomObject>