project/force-app/main/default/objects/RO_Handover__c/fields/Acceptance_Result__c.field-meta.xml
<CustomField>
    <fullName>Acceptance_Result__c</fullName>
    <label>Acceptance Result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Not Qualified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>