project/force-app/main/default/objects/RO_Handover__c/fields/Actual_Acceptance_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Acceptance_Date__c</fullName>
    <label>Actual Acceptance Date</label>
    <type>Date</type>
</CustomField>