project/force-app/main/default/objects/RO_Handover__c/fields/All_Documents_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>All_Documents_Received_Date__c</fullName>
    <label>All Documents Received Date</label>
    <type>Date</type>
</CustomField>