project/force-app/main/default/objects/RO_Handover__c/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <label>Contract</label>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
    <referenceTo>Contract</referenceTo>
    <relationshipName>RO_Handover_Contracts</relationshipName>
</CustomField>