project/force-app/main/default/objects/RO_Handover__c/fields/Document_Approval_Response_Date__c.field-meta.xml
<CustomField>
    <fullName>Document_Approval_Response_Date__c</fullName>
    <label>Document Approval Response Date</label>
    <type>Date</type>
</CustomField>