project/force-app/main/default/objects/RO_Handover__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <type>Lookup</type>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>RO_Handover_Opportunities</relationshipName>
</CustomField>