project/force-app/main/default/objects/RO_Handover__c/fields/OTL_Contract_Handover_Date__c.field-meta.xml
<CustomField>
    <fullName>OTL_Contract_Handover_Date__c</fullName>
    <label>OTL/Contract Handover Date</label>
    <type>Date</type>
</CustomField>