project/force-app/main/default/objects/RO_Handover__c/fields/RO__c.field-meta.xml
<CustomField>
    <fullName>RO__c</fullName>
    <label>Retail Outlet (RO)</label>
    <type>Lookup</type>
    <referenceTo>Product2</referenceTo>
    <relationshipName>RO_Handovers</relationshipName>
</CustomField>