project/force-app/main/default/objects/RO_Handover__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RO Handover</fullName>
            </value>
            <value>
                <fullName>RO Design Approval</fullName>
            </value>
            <value>
                <fullName>RO Construction Control</fullName>
            </value>
            <value>
                <fullName>RO Acceptance</fullName>
            </value>
            <value>
                <fullName>RO Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>