project/force-app/main/default/objects/RO_Handover__c/validationRules/Require_Acceptance_Result.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Acceptance_Result</fullName>
    <active>true</active>
    <description>If Stage is RO Acceptance or RO Completed, Acceptance Result must be filled</description>
    <errorConditionFormula>AND(
    OR(
        ISPICKVAL(Stage__c, &quot;RO Acceptance&quot;),
        ISPICKVAL(Stage__c, &quot;RO Completed&quot;)
    ),
    ISBLANK(TEXT(Acceptance_Result__c))
)</errorConditionFormula>
    <errorDisplayField>Acceptance_Result__c</errorDisplayField>
    <errorMessage>Acceptance Result is required when Stage is RO Acceptance or RO Completed</errorMessage>
</ValidationRule>