project/force-app/main/default/objects/RO_Handover__c/validationRules/Valid_Actual_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_Actual_Date</fullName>
    <active>true</active>
    <description>Actual Handover Date cannot be greater than TODAY</description>
    <errorConditionFormula>Actual_Handover_Date__c &gt; TODAY()</errorConditionFormula>
    <errorDisplayField>Actual_Handover_Date__c</errorDisplayField>
    <errorMessage>Actual Handover Date cannot be in the future</errorMessage>
</ValidationRule>